--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "android"
   ],
   "dependencies": {
+    "@react-native-community/picker": "^1.6.5",
     "google-libphonenumber": "^3.2.2",
     "lodash": "^4.17.4",
-    "prop-types": "^15.5.10",
-    "@react-native-community/picker": "1.6.5"
+    "prop-types": "^15.5.10"
   },
   "peerDependencies": {
     "react-native": ">= 0.25"
